Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-96945

WebM file format not supported for recorder

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P2: Important P2: Important
    • 6.2.2, 6.3.0 Alpha
    • 6.2
    • Multimedia
    • None
    • Android
    • 2021wk42POAndroid&Mobile, 2021wk44POAndroid&Mobile

      Steps to reproduce:
      1. Run recorder example on Android device
      2. Set settings:

      • quality: very high
      • audio codec: opus
      • video codec: VP8
      • file format: WebM
        3. Press record button

      Actual:
      No video is being recorded
      Expected:
      Video should be recorded

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            assam Assam Boudjelthia
            mateusz_sobal Mateusz Sobal
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes