Android: detect encoders/decoders based on MediaCodecList

Instead of hardcoding the values, depends of the list of encoder/
decoders reported by MediaCodecList from the Android API.

Note that WebM format still might not work with the Android Camera API
even though its encoders are found, for that reason, it's explicitly not
included in the list of supported file formats.

Task-number: QTBUG-96945
Pick-to: 6.2
Change-Id: I53eeb12a645c1b3b004970a288650f93e962e90a
Reviewed-by: Pekka Gehör <pekka.gehor@qt.io>
Reviewed-by: Lars Knoll <lars.knoll@qt.io>